# dockaudit

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose-dev.yml  pyproject.toml
.github/workflows/: ci.yml  dashboard.yml  pypi_publish.yml  release.yml
dashboard/backend/: Dockerfile
dashboard/backend/app/: database.py  main.py  models.py  schemas.py
dashboard/frontend/: Dockerfile  build_log.txt  index.html  package-lock.json  package.json  tailwind.config.js
dashboard/frontend/src/: App.jsx  Dashboard.jsx  index.css
dashboard/frontend/src/components/: Sidebar.jsx
dockaudit/: __init__.py  cli.py
dockaudit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dockaudit/analyzer/: __init__.py  performance.py  reliability.py  security.py  vulnerabilities.py
dockaudit/report/: __init__.py  export.py
dockaudit/scanner/: __init__.py  containers.py  daemon.py  images.py  network.py  swarm.py  volumes.py
dockaudit/scoring/: __init__.py  score.py
tests/: test_cli.py
