[project]
name = "dockaudit"
version = "1.0.1"
description = "Docker infrastructure audit tool"
readme = "README.md"
authors = [{name = "Erico Rakotonirina"}]
dependencies = [
 "docker",
 "typer",
 "rich",
 "pydantic",
 "httpx"
]
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["docker", "security", "audit", "devops", "sre", "containers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/Erico-MR/dockaudit"
Repository = "https://github.com/Erico-MR/dockaudit"

[project.scripts]
dockaudit = "dockaudit.cli:app"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dockaudit*"]
exclude = ["dashboard*", "tests*"]

